--- a/rack/Gemfile
+++ b/rack/Gemfile
@@ -2,7 +2,5 @@
 
 source "https://rubygems.org"
 
-git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
-
-gem "couchbase", "3.0.0.beta.1"
+gem "couchbase", "3.0.0"
 gem "rack"
