--- a/sinatra/Gemfile
+++ b/sinatra/Gemfile
@@ -2,8 +2,6 @@
 
 source "https://rubygems.org"
 
-git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
-
-gem "couchbase", "3.0.0.beta.1"
+gem "couchbase", "3.0.0"
 gem "sinatra"
 gem "sinatra-contrib"
