update gemfiles to use couchbase 3.0.1

--- a/bookshelf/config.yml.example
+++ b/bookshelf/config.yml.example
@@ -1,5 +1,5 @@
 couchbase:
-  address: couchbase://localhost
+  address: couchbase://localhost?show_queries=true
   bucket: default
   username: Administrator
   password: password
